namespace RepoFluent.Application;

public sealed class ConcurrentReviewDecisionException : Exception
{
}
