@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure — Preview and review a draft

class CurriculumWorkflow {
  +GetPreviewAsync(actor, id): Task<Preview>
  +ReviewAsync(actor, id, request): Task<ImportStatus>
}

class Preview {
  +Guid ImportId
  +bool IsDraft
  +string PackageChecksum
  +ValidationReport ValidationReport
  +Package Package
}

class ReviewRequest {
  +string Decision
  +string Checksum
  +string ValidationIssueChecksum
  +string? Rationale
}

class ReviewDecision {
  +string ReviewerId
  +string TenantId
  +string PackageId
  +string PackageVersion
  +string PackageChecksum
  +string ValidationIssueChecksum
  +string Decision
  +DateTimeOffset DecidedAt
  +WarningAcknowledgement? WarningAcknowledgement
  +string? Rationale
}

class CurriculumRecord {
  +Guid Id
  +string TenantId
  +string Checksum
  +CurriculumStatus Status
  +ValidationReport? ValidationReport
  +WarningAcknowledgement? WarningAcknowledgement
  +ReviewDecision? ReviewDecision
}

class PackagePresenter {
  {static} +ForReview(package): Package
}

class CurriculumLifecycle {
  +Review(reviewerId, isApproved, canReviewOwnPackage): void
}

interface ICurriculumStore {
  +GetImportAsync(tenantId, id): Task<CurriculumRecord?>
  +SaveImportAsync(record, action, actorId): Task
}

class CurriculumStore
class ConcurrentReviewDecisionException

CurriculumWorkflow ..> Preview : returns
CurriculumWorkflow ..> ReviewRequest : validates
CurriculumWorkflow ..> ReviewDecision : creates
CurriculumWorkflow ..> PackagePresenter : protects answers through
CurriculumWorkflow --> CurriculumLifecycle : transitions through
CurriculumWorkflow --> ICurriculumStore : loads and saves through
ICurriculumStore <|.. CurriculumStore
CurriculumStore ..> ConcurrentReviewDecisionException : raises on decision race
CurriculumWorkflow ..> ConcurrentReviewDecisionException : converts to immutable conflict
ICurriculumStore --> CurriculumRecord : stores
CurriculumRecord *-- ReviewDecision
ReviewDecision o-- "0..1" WarningAcknowledgement
@enduml
